# forge

./: .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  Dockerfile  Dockerfile.cpu  Makefile  README.md  commitlint.config.mjs  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: bench-full-awq.yaml  bench-full.yaml  bench-smoke.yaml  eval-full-awq.yaml  eval-full-bf16.yaml  eval-smoke.yaml  server.yaml
constraints/: eval.txt  serve.txt
deploy/: runpod-run.sh  runpod.md
deploy/hf-spaces/: README.md  app.py  requirements.txt
docs/: local-dev.md  methodology.md
forge/: __init__.py
forge/benchmark/: __init__.py  config.py  metrics.py  runner.py  workloads.py
forge/cost/: __init__.py  model.py  pricing.py
forge/eval/: __init__.py  compare.py  config.py  runner.py
forge/plots/: __init__.py  charts.py  style.py
forge/quantization/: __init__.py  awq.py
forge/serving/: __init__.py  config.py  healthcheck.py
monitoring/: README.md  prometheus.yml
monitoring/grafana/dashboards/: forge.json
monitoring/grafana/provisioning/dashboards/: forge.yaml
monitoring/grafana/provisioning/datasources/: prometheus.yaml
results/bench/full-awq/: full-awq-c0001.json  full-awq-c0004.json  full-awq-c0016.json  full-awq-c0032.json  full-awq-c0064.json
results/bench/full-bf16/: full-bf16-c0001.json  full-bf16-c0004.json  full-bf16-c0016.json  full-bf16-c0032.json  full-bf16-c0064.json
results/bench/illustrative/awq/: full-awq-c0001.json  full-awq-c0004.json  full-awq-c0016.json  full-awq-c0032.json  full-awq-c0064.json
results/bench/illustrative/bf16/: full-bf16-c0001.json  full-bf16-c0004.json  full-bf16-c0016.json  full-bf16-c0032.json  full-bf16-c0064.json
results/charts/: cost-per-1m-tokens.json  quality-retention.json
results/eval/full/: full-awq.json  full-bf16.json
results/eval/illustrative/: full-awq.json  full-bf16.json
scripts/: __init__.py  _gen_illustrative.py  bench.py  chart.py  doctor.py  eval.py  quantize.py  serve.py
tests/: test_bench_config.py  test_bench_metrics.py  test_bench_runner.py  test_chart_data.py  test_cost_model.py  test_doctor.py  test_eval_compare.py  test_eval_config.py  test_eval_runner.py  test_healthcheck.py  test_package.py  test_quantization.py  test_runpod_run_script.py  test_serving_config.py  test_workloads.py
tests/fixtures/: bench-c0001.json  bench-c0002.json  eval-awq.json  eval-bf16.json
