[project]
name = "forge"
version = "0.1.0"
description = "Production-grade LLM inference serving & optimization — benchmarks, quantization, cost analysis"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Fernando Picoral", email = "fernandopicoral@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

# vLLM is intentionally NOT a managed dep — it has CUDA/torch transitives that
# don't resolve cleanly across darwin/arm64 and linux/x86_64 in a single lock.
# Install it explicitly per platform using the canonical constraint file:
#   uv pip install -c constraints/serve.txt vllm
# The Dockerfile and docs/local-dev.md both follow this pattern.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "C4",   # comprehensions
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
files = ["forge", "scripts", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=forge --cov-report=term-missing --cov-report=xml"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["forge"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
